--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,3 +1,9 @@
+body {
+	background-image: url('../images/seamless_paper_texture.png'); 
+	font-family: 'Coming Soon', cursive;	
+	font-size: 120%;
+}
+
 .title {
 	padding-top: 20px;
 	font-size: 30px;
