--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Blog</title>
 	<link rel="stylesheet" href="/stylesheets/styles.css">
+	<link href='http://fonts.googleapis.com/css?family=Reenie+Beanie|Coming+Soon' rel='stylesheet' type='text/css'>
 	<script src="/javascripts/jquery.js"></script>
 	<script src="/javascripts/scripts.js"></script>
 </head>
