adds view partials and helper methods

--- a/views/index.erb
+++ b/views/index.erb
@@ -13,8 +13,7 @@
 		</tr>
 		<tr>
 			<td class="time">
-				<%= post.created_at %><br>
-				<%= post.updated_at %>
+				<%= post.created_at.strftime("%k:%M, %d %b %Y") %>
 			</td>
 		</tr>
 		<tr>
