--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,6 +1,10 @@
 <form id="editpost" action="/entry/<%= @post.id %>" method="post">
 	<input type="hidden" name="_method" value="patch" />
-	<input type="text" name="post[title]" value="<%= @post.title %>"><br>
-	<input type="text" name="post[post]" value="<%= @post.post %>"><br>
+	<textarea rows="1" cols="50" name="post[title]">
+		<%= @post.title %>
+	</textarea><br>
+	<textarea rows="25" cols="50" name="post[post]">
+		<%= @post.post %>
+	</textarea><br>
 	<input type="submit" value="Edit Post" />
 </form>
